[gd_scene load_steps=7 format=3 uid="uid://cv0y4y2tpl3ab"]

[ext_resource type="Texture2D" uid="uid://c4vdodfuafca4" path="res://Sprites/tilesheet.png" id="1_5mg4u"]
[ext_resource type="Script" uid="uid://c2ysyy5rkqkd1" path="res://Scripts/arrow.gd" id="1_7v023"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_5mg4u")
region = Rect2(448, 576, 62, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_5mg4u")
region = Rect2(512, 576, 62, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_7v023"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5mg4u"]
radius = 7.0

[node name="Arrow" type="Area2D"]
script = ExtResource("1_7v023")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
texture_filter = 1
rotation = 1.5707964
sprite_frames = SubResource("SpriteFrames_7v023")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14, 1)
shape = SubResource("CircleShape2D_5mg4u")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
